--- a/run_onchange_dconf.sh.tmpl
+++ b/run_onchange_dconf.sh.tmpl
@@ -1,8 +1,10 @@
 #!/bin/bash
 
+# Configuration
+# .config/dconf/dconf.ini: {{ include "dot_config/dconf/dconf.ini" | sha256sum }}
+
 set -o errexit
 set -o nounset
 set -o pipefail
 
-# .config/dconf/dconf.ini: {{ include "dot_config/dconf/dconf.ini" | sha256sum }}
 dconf load / < .config/dconf/dconf.ini
