--- a/run_onchange_gnome-extensions.sh.tmpl
+++ b/run_onchange_gnome-extensions.sh.tmpl
@@ -1,8 +1,12 @@
 #!/bin/bash
 
+# Configuration
+# .local/share/gnome-shell/extensions.txt: {{ include "dot_local/share/gnome-shell/extensions.txt" | sha256sum }}
+
 set -o errexit
 set -o nounset
 set -o pipefail
 
-# .local/share/gnome-shell/extensions.txt: {{ include "dot_local/share/gnome-shell/extensions.txt" | sha256sum }}
-xargs --max-lines=1 ~/.venv/bin/gnome-extensions-cli install < .local/share/gnome-shell/extensions.txt
+source .shell/environment/virtualenv.sh
+
+xargs --max-lines=1 gnome-extensions-cli install < .local/share/gnome-shell/extensions.txt
