--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -87,71 +87,82 @@ EOF
 
 apt_repository "azlux" "http://packages.azlux.fr/debian/" "bullseye main" "" "https://azlux.fr/repo.gpg"
 deb_repo "chezmoi" "https://github.com/twpayne/chezmoi/releases/download/v2.18.1/chezmoi_2.18.1_linux_amd64.deb" ""
-apt_repository "docker" "https://download.docker.com/linux/ubuntu" "${DISTRO_CODENAME} stable" "amd64" "https://download.docker.com/linux/ubuntu/gpg"
-apt_repository "dropbox" "https://linux.dropbox.com/ubuntu" "disco main" "i386,amd64" "https://linux.dropbox.com/fedora/rpm-public-key.asc"
-apt_repository "github-cli" "https://cli.github.com/packages" "stable main" "amd64" "https://cli.github.com/packages/githubcli-archive-keyring.gpg"
-apt_repository "kubernetes" "https://apt.kubernetes.io" "kubernetes-xenial main" "" "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
-apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "${DISTRO_CODENAME} main" "amd64" "https://apt.releases.hashicorp.com/gpg"
-apt_repository "libcontainers" "http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/unstable/x${DISTRO}_${DISTRO_RELEASE}/" "/" "" "http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/unstable/x${DISTRO}_${DISTRO_RELEASE}/Release.key"
-deb_repo "minikube" "https://github.com/kubernetes/minikube/releases/download/v1.26.0/minikube_1.26.0-0_amd64.deb" ""
-apt_repository "slack" "https://packagecloud.io/slacktechnologies/slack/debian/" "jessie main" "" "https://packagecloud.io/slacktechnologies/slack/gpgkey"
 apt_repository "speedtest-cli" "https://packagecloud.io/ookla/speedtest-cli/ubuntu/" "focal main" "" "https://packagecloud.io/ookla/speedtest-cli/gpgkey"
 apt_repository "vscode" "https://packages.microsoft.com/repos/code" "stable main" "amd64,arm64,armhf" "https://packages.microsoft.com/keys/microsoft.asc"
-deb_repo "zoom" "https://zoom.us/client/latest/zoom_amd64.deb" "https://zoom.us/linux/download/pubkey"
 
 update
 
 packagelist "apt-file" "apt-utils" "dpkg-sig" "synaptic"
-package "awscli"
-package "bat"
-packagelist "binfmt-support" "qemu-user-static"
-package_from_url "bottom" "--location https://github.com/ClementTsang/bottom/releases/download/0.6.8/bottom_0.6.8_amd64.deb"
-package "build-essential"
 package "chezmoi"
-package "code"
-package "ctop"
 packagelist "curl" "wget"
-packagelist "dconf-cli" "dconf-editor" "libglib2.0-bin"
-packagelist "docker-ce" "docker-ce-cli"
-package "dog"
-package "dropbox"
-package "duf"
-package "exa"
-package "fd-find"
 package "flatpak"
-package "fzf"
-package "gawk"
-package "gh"
-package "gimp"
+
+# Development
+packagelist "binfmt-support" "qemu-user-static"
+package "build-essential"
+package "code" "vim"
 packagelist "git" "git-crypt" "git-extras" "git-lfs"
-package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
-package "gpg"
-packagelist "htop" "iftop" "powerstat"
-packagelist "iputils-ping" "gping"
-package "jq"
-packagelist "kubectl" "minikube"
-package "less"
-packagelist "libcairo2-dev" "libgirepository1.0-dev" "python3-gi" # for `pygobject`
-package "moreutils"
+
+# Networking
 packagelist "bind9-dnsutils" "netcat-openbsd" "netstat-nat" "whois"
-packagelist "network-manager-l2tp" "network-manager-openconnect"
+package "dog"
+packagelist "iputils-ping" "gping"
 packagelist "nmap" "traceroute"
-packagelist "packer" "terraform"
-packagelist "parallel" "retry"
-packagelist "podman" "fuse-overlayfs" "skopeo" "slirp4netns" "uidmap"
-packagelist "python3" "python3-dev" "python3-venv"
-package "qemu-user-static"
-package "ripgrep"
-package "slack-desktop"
 package "speedtest"
 packagelist "rsync" "openssh-client"
 package "sss"
-package "synaptic"
-package "terminator"
+
+# Utils
+package "bat"
+package_from_url "bottom" "--location https://github.com/ClementTsang/bottom/releases/download/0.6.8/bottom_0.6.8_amd64.deb"
+package "ctop" "htop" "iftop" "powerstat"
+package "duf"
+package "exa"
+package "fd-find"
+package "fzf"
+package "gawk"
+package "gpg"
+package "jq"
+package "less" "moreutils"
+packagelist "parallel" "retry"
+package "ripgrep"
 package "tree"
-package "vim"
-package "xclip"
-package "zoom"
 package "zoxide"
 
+# Miscellaneous
+packagelist "libcairo2-dev" "libgirepository1.0-dev" "python3-gi" # for `pygobject`
+packagelist "python3" "python3-dev" "python3-venv"
+
 flatpak remote-add --if-not-exists "flathub" "https://flathub.org/repo/flathub.flatpakrepo"
+
+{{ if not .server }}
+apt_repository "libcontainers" "http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/unstable/x${DISTRO}_${DISTRO_RELEASE}/" "/" "" "http://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/unstable/x${DISTRO}_${DISTRO_RELEASE}/Release.key"
+apt_repository "docker" "https://download.docker.com/linux/ubuntu" "${DISTRO_CODENAME} stable" "amd64" "https://download.docker.com/linux/ubuntu/gpg"
+apt_repository "dropbox" "https://linux.dropbox.com/ubuntu" "disco main" "i386,amd64" "https://linux.dropbox.com/fedora/rpm-public-key.asc"
+apt_repository "github-cli" "https://cli.github.com/packages" "stable main" "amd64" "https://cli.github.com/packages/githubcli-archive-keyring.gpg"
+apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "${DISTRO_CODENAME} main" "amd64" "https://apt.releases.hashicorp.com/gpg"
+apt_repository "kubernetes" "https://apt.kubernetes.io" "kubernetes-xenial main" "" "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
+deb_repo "minikube" "https://github.com/kubernetes/minikube/releases/download/v1.26.0/minikube_1.26.0-0_amd64.deb" ""
+
+packagelist "dconf-cli" "dconf-editor" "libglib2.0-bin"
+packagelist "docker-ce" "docker-ce-cli"
+package "dropbox"
+package "gh"
+package "gimp"
+package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
+packagelist "kubectl" "minikube"
+packagelist "network-manager-l2tp" "network-manager-openconnect"
+packagelist "packer" "terraform"
+packagelist "podman" "fuse-overlayfs" "skopeo" "slirp4netns" "uidmap"
+package "terminator"
+package "xclip"
+{{ end }}
+
+{{ if .work }}
+apt_repository "slack" "https://packagecloud.io/slacktechnologies/slack/debian/" "jessie main" "" "https://packagecloud.io/slacktechnologies/slack/gpgkey"
+deb_repo "zoom" "https://zoom.us/client/latest/zoom_amd64.deb" "https://zoom.us/linux/download/pubkey"
+
+package "awscli"
+package "slack-desktop"
+package "zoom"
+{{ end }}
