--- a/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
@@ -7,5 +7,7 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ if not .server }}
 xargs --max-lines=1 code --force --install-extension < .vscode/extensions.txt
 code --list-extensions > .vscode/extensions.txt
+{{ end }}
