Fix `vim` plugin installation

--- a/.chezmoiscripts/run_onchange_after_50_vundle.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vundle.sh.tmpl
@@ -7,4 +7,4 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
-vim -c PluginInstall -c PluginUpdate -c PluginClean! -c qall
+vim -u NONE -c 'source .vimrc' -c PluginInstall -c PluginUpdate -c PluginClean! -c qall
