--- a/.chezmoiscripts/run_onchange_after_99_gnome-extensions.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_99_gnome-extensions.sh.tmpl
@@ -1,12 +1,12 @@
 #!/bin/bash
 
-# Configuration
-# .local/share/gnome-shell/extensions.txt: {{ include "dot_local/share/gnome-shell/extensions.txt" | sha256sum }}
-
 set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ if not .server -}}
+# Configuration
+# .local/share/gnome-shell/extensions.txt: {{ include "dot_local/share/gnome-shell/extensions.txt" | sha256sum }}
 source .shell/environment/virtualenv.sh
-
 xargs --max-lines=1 gnome-extensions-cli install < .local/share/gnome-shell/extensions.txt
+{{ end -}}
