--- a/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
@@ -1,13 +1,12 @@
 #!/bin/bash
 
-# Configuration
-# .vscode/extensions.txt: {{ include "dot_vscode/extensions.txt" | sha256sum }}
-
 set -o errexit
 set -o nounset
 set -o pipefail
 
-{{ if not .server }}
+{{ if not .server -}}
+# Configuration
+# .vscode/extensions.txt: {{ include "dot_vscode/extensions.txt" | sha256sum }}
 xargs --max-lines=1 code --force --install-extension < .vscode/extensions.txt
 code --list-extensions > .vscode/extensions.txt
-{{ end }}
+{{ end -}}
