Add libraries needed for Python

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -102,6 +102,9 @@ package "build-essential"
 packagelist "git" "git-crypt" "git-extras" "git-lfs"
 package "vim"
 
+# Library Development
+package "libncurses-dev" "libreadline-dev" "libssl-dev"
+
 # Networking
 packagelist "bind9-dnsutils" "netcat-openbsd" "netstat-nat" "whois"
 package "dog"
