--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -103,7 +103,11 @@ packagelist "git" "git-crypt" "git-extras" "git-lfs"
 package "vim"
 
 # Library Development
-package "libncurses-dev" "libreadline-dev" "libssl-dev"
+package "libbz2-dev"
+package "liblzma-dev"
+package "libncurses-dev"
+package "libreadline-dev"
+package "libssl-dev"
 
 # Networking
 packagelist "bind9-dnsutils" "netcat-openbsd" "netstat-nat" "whois"
