--- a/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
@@ -5,8 +5,19 @@ set -o nounset
 set -o pipefail
 
 {{ if not .server -}}
-# Configuration
-# .vscode/extensions.txt: {{ include "dot_vscode/extensions.txt" | sha256sum }}
-xargs --max-lines=1 code --force --install-extension < .vscode/extensions.txt
-code --list-extensions > .vscode/extensions.txt
+{{
+  $extensions := list
+    "eamodio.gitlens"
+    "mohsen1.prettify-json"
+    "ms-azuretools.vscode-docker"
+    "ms-vscode-remote.remote-containers"
+    "ms-vscode-remote.remote-ssh"
+    "ms-vscode-remote.remote-ssh-edit"
+    "VisualStudioExptTeam.vscodeintellicode"
+-}}
+
+{{ range $extensions -}}
+code --force --install-extension {{ . }}
+{{ end -}}
+
 {{ end -}}
