Only install `apt` packages on Debian

--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -1,10 +1,11 @@
 #!/bin/bash
 
-# Configuration
-# .aptfile: {{ include "dot_aptfile.tmpl" | sha256sum }}
-
 set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ if eq .chezmoi.osRelease.idLike "debian" -}}
+# Configuration
+# .aptfile: {{ include "dot_aptfile.tmpl" | sha256sum }}
 sudo .shell/modules/bash-aptfile/bin/aptfile .aptfile
+{{ end -}}
