Get rid of `Makefile`

--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -7,5 +7,6 @@ set -o pipefail
 {{ if eq .chezmoi.osRelease.idLike "debian" -}}
 # Configuration
 # .aptfile: {{ include "dot_aptfile.tmpl" | sha256sum }}
-sudo .shell/modules/bash-aptfile/bin/aptfile .aptfile
+{{ if not (eq .chezmoi.username "root") -}}sudo {{ end -}}
+.shell/modules/bash-aptfile/bin/aptfile .aptfile
 {{ end -}}
