Install `docker-compose` with `apt`

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -152,7 +152,7 @@ apt_repository "vscode" "https://packages.microsoft.com/repos/code" "stable main
 
 package "code"
 packagelist "dconf-cli" "dconf-editor" "libglib2.0-bin"
-packagelist "docker-ce" "docker-ce-cli"
+packagelist "docker-ce" "docker-ce-cli" "docker-compose-plugin"
 package "dropbox"
 package "gh"
 package "gimp"
