`ripgrep` isn't available on Ubuntu 20.04

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -133,7 +133,9 @@ package "gpg"
 package "jq"
 package "less" "moreutils"
 packagelist "parallel" "retry"
+{{ if not (eq .chezmoi.osRelease.versionCodename "focal") -}}
 package "ripgrep"
+{{ end -}}
 package "tree"
 package "zoxide"
 
