`snap` needs `sudo`

--- a/.chezmoiscripts/run_onchange_after_10_snap.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_snap.sh.tmpl
@@ -4,11 +4,13 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+{{ $username := .chezmoi.username -}}
 {{
   $snaps := list
     "yq"
 -}}
 
 {{ range $snaps -}}
+{{ if ne $username "root" -}}sudo {{ end -}}
 snap install {{ . }}
 {{ end -}}
