--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -4,7 +4,7 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
-source .shell/environment/asdf.sh
+{{ include "shell/environment/asdf.sh" -}}
 
 function asdf_plugin() {
   asdf plugin list | grep --quiet "^${1}$" && return
