Install `asdf-shellcheck`

--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -15,6 +15,7 @@ function asdf_plugin() {
 asdf_plugin golang
 asdf_plugin nodejs
 asdf_plugin python
+asdf_plugin shellcheck
 
 # Install tool versions.
 asdf install
