Install `asdf-hadolint`

--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -13,6 +13,7 @@ function asdf_plugin() {
 
 # Install plugins.
 asdf_plugin golang
+asdf_plugin hadolint
 asdf_plugin nodejs
 asdf_plugin python
 asdf_plugin shellcheck
