Install `asdf-shfmt`

--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -17,6 +17,7 @@ asdf_plugin hadolint
 asdf_plugin nodejs
 asdf_plugin python
 asdf_plugin shellcheck
+asdf_plugin shfmt
 
 # Install tool versions.
 asdf install
