--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -132,6 +132,7 @@ package "gawk"
 package "gpg"
 package "jq"
 package "less" "moreutils"
+package "meshlab"
 packagelist "parallel" "retry"
 {{ if ne .chezmoi.osRelease.versionCodename "focal" -}}
 package "ripgrep"
