Install `atlas-cli` and `cloudtoken`

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -95,6 +95,7 @@ packagelist "apt-file" "synaptic"
 package "chezmoi"
 packagelist "curl" "wget"
 package "flatpak"
+package "libarchive-tools"
 
 # Development
 packagelist "binfmt-support" "qemu-user-static"
