--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -168,6 +168,7 @@ package "gimp"
 package_from_url "google-chrome-stable" "https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb"
 {{ end -}}
 packagelist "kubectl" "minikube"
+package "liquidprompt"
 packagelist "network-manager-l2tp" "network-manager-openconnect"
 packagelist "packer" "terraform"
 packagelist "podman" "fuse-overlayfs" "skopeo" "slirp4netns" "uidmap"
