--- a/.chezmoiscripts/run_onchange_after_50_vim.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vim.sh.tmpl
@@ -7,4 +7,4 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
-vim -e -s -u NONE -S .vimrc -c PluginInstall -c PluginUpdate -c PluginClean! -c qall
+vim -e -s -u NONE -S .vimrc -c PlugInstall -c PlugUpdate -c PlugClean! -c qall
