Install more VSCode extensions

--- a/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vscode.sh.tmpl
@@ -8,11 +8,15 @@ set -o pipefail
 {{
   $extensions := list
     "eamodio.gitlens"
+    "golang.Go"
+    "HashiCorp.terraform"
     "mohsen1.prettify-json"
     "ms-azuretools.vscode-docker"
+    "ms-python.python"
     "ms-vscode-remote.remote-containers"
     "ms-vscode-remote.remote-ssh"
     "ms-vscode-remote.remote-ssh-edit"
+    "MS-vsliveshare.vsliveshare"
     "VisualStudioExptTeam.vscodeintellicode"
 -}}
 
