Ensure `bash` is installed

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -98,6 +98,7 @@ package "flatpak"
 package "libarchive-tools"
 
 # Development
+packagelist "bash" "bash-completion"
 packagelist "binfmt-support" "qemu-user-static"
 package "build-essential"
 packagelist "git" "git-crypt" "git-extras" "git-lfs"
