--- a/.chezmoiscripts/run_onchange_after_20_virtualenv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_virtualenv.sh.tmpl
@@ -7,7 +7,7 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
-{{ include "shell/environment/asdf.sh" -}}
+{{ include "shell/config/asdf.sh" -}}
 {{ include "shell/environment/virtualenv.sh" -}}
 
 # See danhper/asdf-python#127.
