--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -4,6 +4,9 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
+# Configuration
+# .tool-versions: {{ include "dot_tool-versions" | sha256sum }}
+
 {{ include "shell/config/asdf.sh" -}}
 
 function asdf_plugin() {
