--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -1,5 +1,9 @@
 #!/bin/bash
 
+set -o errexit
+set -o nounset
+set -o pipefail
+
 {{ if eq .chezmoi.osRelease.idLike "debian" -}}
 # Configuration
 # .aptfile: {{ include "dot_aptfile.tmpl" | sha256sum }}
