--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -1,5 +1,9 @@
 #!/bin/bash
 
+set -o errexit
+set -o nounset
+set -o pipefail
+
 # Configuration
 # .tool-versions: {{ include "dot_tool-versions" | sha256sum }}
 
