--- a/.chezmoiscripts/run_onchange_after_20_virtualenv.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_virtualenv.sh.tmpl
@@ -3,6 +3,10 @@
 # Configuration
 # .venv/requirements.in: {{ include "dot_venv/requirements.in" | sha256sum }}
 
+set -o errexit
+set -o nounset
+set -o pipefail
+
 {{ include "shell/config/asdf.sh" -}}
 {{ include "shell/environment/virtualenv.sh" -}}
 
