--- a/.chezmoiscripts/run_onchange_after_50_vim.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_vim.sh.tmpl
@@ -3,4 +3,8 @@
 # Configuration
 # .vimrc: {{ include "dot_vimrc" | sha256sum }}
 
+set -o errexit
+set -o nounset
+set -o pipefail
+
 vim -e -s -u NONE -S .vimrc -c PlugInstall -c PlugUpdate -c PlugClean! -c qall
