--- a/.chezmoiscripts/run_onchange_after_99_dconf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_99_dconf.sh.tmpl
@@ -1,5 +1,9 @@
 #!/bin/bash
 
+set -o errexit
+set -o nounset
+set -o pipefail
+
 # Configuration
 # .config/dconf/dconf.ini: {{ include "dot_config/dconf/dconf.ini" | sha256sum }}
 dconf load / <.config/dconf/dconf.ini
