--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -24,6 +24,7 @@ asdf update
 
 # Install/update plugins.
 asdf_plugin act
+asdf_plugin actionlint
 asdf_plugin golang
 asdf_plugin hadolint
 asdf_plugin nodejs
