Install `bats` with `asdf`

--- a/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_20_asdf.sh.tmpl
@@ -25,6 +25,7 @@ asdf update
 # Install/update plugins.
 asdf_plugin act
 asdf_plugin actionlint
+asdf_plugin bats
 asdf_plugin golang
 asdf_plugin hadolint
 asdf_plugin nodejs
