--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -173,7 +173,7 @@ package "liquidprompt"
 packagelist "network-manager-l2tp" "network-manager-openconnect"
 packagelist "packer" "terraform"
 packagelist "podman" "fuse-overlayfs" "skopeo" "slirp4netns" "uidmap"
-package "terminator"
+package "terminator" "tmux"
 package "xclip"
 {{- end }}
 
