--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -1,6 +1,6 @@
 {{- $ephemeral := false -}}
 {{- $headless := false -}}
-{{- $laptop := eq (output "hostnamectl" "chassis" "2>&1") "laptop" -}}
+{{- $laptop := eq (output "hostnamectl" "--json=short" | fromJson).Chassis "laptop" -}}
 {{- $personal := true -}}
 {{- $work := false -}}
 
