--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -119,6 +119,7 @@ packagelist "nmap" "traceroute"
 package "speedtest"
 packagelist "rsync" "openssh-client"
 package "sss"
+package "wireshark-qt"
 
 # Utils
 package "bat"
