Use `gnome-terminal` instead of `terminator`

--- a/dot_aptfile.tmpl
+++ b/dot_aptfile.tmpl
@@ -174,7 +174,7 @@ package "liquidprompt"
 packagelist "network-manager-l2tp" "network-manager-openconnect"
 packagelist "packer" "terraform"
 packagelist "podman" "fuse-overlayfs" "skopeo" "slirp4netns" "uidmap"
-package "terminator" "tmux"
+package "tmux"
 package "xclip"
 {{- end }}
 
